Revert "--allow-empty-commit"
This reverts commit 537ceafd1701285a68fdaba6a78951f78a4d24eb.

Commit feito por engano

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="styles/acesso.css">
 
   <!-- ---------------------- lógica aplicada no login ----------------------- -->
+  <script src="/scripts/utils.js"></script>
+  <script src="/scripts/index.js"></script>
+
 </head>
 
 <body>
@@ -29,24 +32,20 @@
       <label>
         Email:
         <input id="inputEmail" type="text">
-        <small id="inputEmailValidacao"></small>
       </label>
       <label>
         Senha:
         <input id="inputPassword" type="password">
       </label>
 
-      <button id="botaoAcessar" type="submit">Acessar</button>
+      <button type="submit">Acessar</button>
 
     </form>
     <div class="ingressar">
       <a href="signup.html">Não possui conta? Crie agora mesmo</a>
     </div>
   </div>
-  <script src="./scripts/utils.js"></script>
-  <script src="./scripts/auth.js"></script>
-  <script src="/scripts/validacoes/utils.js"></script>
-  <script src="/scripts/login/index.js"></script>
+
 </body>
 
 </html>
