--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
         <input id="inputPassword" type="password">
       </label>
 
-      <button type="submit">Acessar</button>
+      <button id="submit" type="submit">Acessar</button>
 
     </form>
     <div class="ingressar">
       <a href="signup.html">Não possui conta? Crie agora mesmo</a>
     </div>
   </div>
+  <script src="./scripts/autenticacao.js"></script>
 
 </body>
 
