Correções no modelo_base

--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
         <p>To-Do App</p>
       </div>
       <h1>Acessar</h1>
-
-
       <label>
         Email:
-        <input id="inputEmail" type="text">
+        <input id="inputEmail" type="email">
       </label>
       <label>
         Senha:
