--- a/signup.html
+++ b/signup.html
@@ -32,12 +32,12 @@
         <input type="text">
       </label>
       <label>
-        Apelido:
+        Sobrenome:
         <input type="text">
       </label>
       <label>
         Email:
-        <input type="text">
+        <input type="email">
       </label>
       <label>
         Senha:
