--- a/tarefas.html
+++ b/tarefas.html
@@ -42,7 +42,7 @@
 
   <form class="nova-tarefa">
     <div class="not-done "></div>
-    <input id="novaTarea" type="text" placeholder="Nova tarefa">
+    <input id="novaTarefa" type="text" placeholder="Nova tarefa">
     <button type="submit">
       <img src="./assets/plus.png" alt="Adicionar uma nova tarefa">
     </button>
@@ -50,7 +50,8 @@
 
 
   <ul class="tarefas-pendentes">
-    <div id="skeleton">
+    <div>
+    <!-- <div id="skeleton"> -->
       <li class="tarefa">
         <div class="not-done"></div>
         <div class="descricao">
