Revert "erro de CORS"
This reverts commit e2023eae754d8420786b4dcee1c156567f8ae2ad.

--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
         <input id="inputPassword" type="password">
       </label>
 
-      <button id="submit" type="submit">Acessar</button>
+      <button type="submit">Acessar</button>
 
     </form>
     <div class="ingressar">
       <a href="signup.html">Não possui conta? Crie agora mesmo</a>
     </div>
   </div>
-  <script src="./scripts/autenticacao.js"></script>
 
 </body>
 
