--- a/tarefas.html
+++ b/tarefas.html
@@ -15,7 +15,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- ----------------------------- sweet alert ----------------------------- -->
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="/cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- CDN example (unpkg) -->
   <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 
@@ -50,8 +50,6 @@
 
 
   <ul class="tarefas-pendentes">
-    <div>
-    <!-- <div id="skeleton"> -->
       <li class="tarefa">
         <div class="not-done"></div>
         <div class="descricao">
@@ -73,8 +71,6 @@
           <p class="timestamp">Criada em: 15/07/21</p>
         </div>
       </li>
-
-    </div>
   </ul>
 
   <h2 class="titulo-terminadas">Tarefas terminadas</h2>
