--- a/signup.html
+++ b/signup.html
@@ -48,7 +48,7 @@
         <input type="password">
       </label>
 
-      <button>Criar conta</button>
+      <button type="submit">Criar conta</button>
 
     </form>
     <div class="ingressar">
