--- a/tarefas.html
+++ b/tarefas.html
@@ -21,6 +21,7 @@
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+  <script src="./scripts/tarefa.js"></script>
 
   <title>To-Do App</title>
 </head>
@@ -77,6 +78,7 @@
   <ul class="tarefas-terminadas">
 
   </ul>
+
 
 </body>
 
