--- a/signup.html
+++ b/signup.html
@@ -26,23 +26,23 @@
 
                 <label>
                     Nome:
-                    <input id="inputName" type="text" />
+                    <input id="inputName" required type="text" />
                 </label>
                 <label>
                     Sobrenome:
-                    <input id="inputLastName" type="text" />
+                    <input id="inputLastName" required type="text" />
                 </label>
                 <label>
                     Email:
-                    <input id="inputEmail" type="email" />
+                    <input id="inputEmail" required type="email" />
                 </label>
                 <label>
                     Senha:
-                    <input id="inputPassword" type="password" />
+                    <input id="inputPassword" required type="password" />
                 </label>
                 <label>
                     Repetir senha:
-                    <input id="inputPasswordTest" type="password" />
+                    <input id="inputPasswordConfirm" required type="password" />
                 </label>
 
                 <button type="submit">Criar conta</button>
