--- a/tarefas.html
+++ b/tarefas.html
@@ -33,7 +33,7 @@
     </nav>
 
     <div class="user-info">
-      <p>Nome usuário</p>
+      <p class="user-name"></p>
       <div class="user-image"></div>
       <p id="closeApp">Finalizar sessão</i>
       </p>
