--- a/tarefas.html
+++ b/tarefas.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- ----------------------------- estilos CSS ----------------------------- -->
   <link rel="stylesheet" href="./styles/tarefas.css">
+  <link rel="stylesheet" href="./styles/popup.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- ------------------- Biblioteca de icones - Fontawesome -------------------- -->
@@ -40,6 +41,18 @@
     </div>
   </header>
 
+  <div class="popup-wrapper">
+    <div class="popup">
+      <div class="popup-close">x</div>
+      <div class="popup-content">
+        <p>Deseja finalizar a sessão?</p>
+        <div class="btn-div">
+          <p class="btn-submit-cancel btn-submit">Cancelar</i>
+          <p class="btn-submit-close btn-submit">Finalizar</i>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <form class="nova-tarefa">
     <div class="not-done "></div>
@@ -51,27 +64,27 @@
 
 
   <ul class="tarefas-pendentes">
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
+    <li class="tarefa">
+      <div class="not-done"></div>
+      <div class="descricao">
+        <p class="nome">Nova tarefa</p>
+        <p class="timestamp">Criada em: 15/07/21</p>
+      </div>
+    </li>
+    <li class="tarefa">
+      <div class="not-done"></div>
+      <div class="descricao">
+        <p class="nome">Nova tarefa</p>
+        <p class="timestamp">Criada em: 15/07/21</p>
+      </div>
+    </li>
+    <li class="tarefa">
+      <div class="not-done"></div>
+      <div class="descricao">
+        <p class="nome">Nova tarefa</p>
+        <p class="timestamp">Criada em: 15/07/21</p>
+      </div>
+    </li>
   </ul>
 
   <h2 class="titulo-terminadas">Tarefas terminadas</h2>
@@ -79,7 +92,7 @@
 
   </ul>
 
-
+  <script src="./scripts/popup.js"></script>
 </body>
 
 </html>
