--- a/tarefas.html
+++ b/tarefas.html
@@ -22,7 +22,7 @@
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-  <script src="./scripts/tarefa.js"></script>
+  <script src="./scripts/task.js"></script>
 
   <title>To-Do App</title>
 </head>
