--- a/tarefas.html
+++ b/tarefas.html
@@ -11,18 +11,18 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- ------------------- Biblioteca de icones - Fontawesome -------------------- -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
   <!-- ----------------------------- sweet alert ----------------------------- -->
-  <script src="/cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- <script src="/cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
   <!-- CDN example (unpkg) -->
   <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-  <script src="./scripts/task.js"></script>
+  <script src="./scripts/tasks.js"></script>
 
   <title>To-Do App</title>
 </head>
