--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="styles/acesso.css" />
 
         <!-- ---------------------- lógica aplicada no login ----------------------- -->
-        <script src="/scripts/utils.js"></script>
-        <script src="/scripts/index.js"></script>
+        <script src="./scripts/popup.js"></script>
+        <script src="./scripts/index.js"></script>
     </head>
 
     <body>
