--- a/signup.html
+++ b/signup.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="styles/acesso.css" />
 
         <!-- ---------------------- lógica aplicada no registro -------------------- -->
-        <script src="/scripts/utils.js"></script>
-        <script src="/scripts/signup.js"></script>
+        <script src="./scripts/popup.js"></script>
+        <script src="./scripts/signup.js"></script>
     </head>
 
     <body>
